--- a/templates/blog/affiche.html.twig
+++ b/templates/blog/affiche.html.twig
@@ -1,20 +1,14 @@
 {% extends 'base.html.twig' %}
-    {% block body %}
-        <br/><br/>
-      <div class = "jumbotron">
-        <h1><mark>Aide:</mark></h1>
-        <br/><br/>
 
-        <p class = "lead">
-            <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;">
-            DiéBlog est un blog avec un système de commentaire.<br/>
-            Le blog possède des articles rangés en fonction de leurs dates de publications,les articles les plus récent en premier.<br/>
-            -Vous avez la possibilité de créer un article et devra à chaque fois remplire obligatoirement tous les champs pour créer un article.<br/>
-            <mark>NB:</mark>Sauf le champ pour l'image d'illustration qui est facultative.<br/>
-            -Catégorisez ton article afin que les visiteurs accèdent facilement aux informations recherchées.<br/>
-                Merci!
-            </font> </font>
-        </p>
-      </div> 
-       
+    {% block body %}
+      <h1><mark>Aide :</mark></h1>
+
+        Un « blog » (en français blogue, journal web ou carnet web) est un site web personnel qui permet à un internaute de mettre facilement et simplement des informations en ligne sous forme de journal. Le terme « blog » est la contraction de « weblog » (au même titre, «blogue» est la contraction de «weblogue»). 
+
+        Le blog est donc une page web, qui s'appuie généralement sur un outil dynamique de publication permettant de gérer la mise en page du contenu, dans laquelle l'auteur publie des actualités, des liens vers d'autres blogs ou sites web, des photos ou de courts textes de sa création. Sur un blog, les brèves, appelées notes ou billets, sont publiées dans un ordre antéchronologique, c'est-à-dire que les billets les plus récents sont affichés en haut de page, puis suivent les messages les plus anciens.
+
+
+        Ce qui fait la sigularité d'un blog, c'est notamment la possibilité aux lecteurs de réagir aux articles publiés, ce qui offre aux blogs une grande réactivité et une grande richesse.
+
+        
     {% endblock %}
