--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -17,17 +17,18 @@
             {% endif %}
 
         </h1>
+            
+        {{ form_start(formArticle) }}
+
+        {{ form_row(formArticle.titre, {'attr' : {'placeholder' : "Titre de l'article" }}) }}
+        {{ form_row(formArticle.category, {'label' : 'Catégorie de l\'article'}) }}
+        {{ form_row(formArticle.auteur, {'attr' : {'placeholder' : "Nom de l'auteur" }}) }}
+        {{ form_row(formArticle.description, {'attr' : {'placeholder' : "Contenu de l'article" }}) }}
+        {{ form_row(formArticle.image, {'attr' : {'placeholder' : "URL de l'image" }}) }}
+
+
+        <button type="submit" class="btn btn-success">
         
-            {{ form_start(formArticle) }}
-
-            {{ form_row(formArticle.titre, {'attr' : {'placeholder' : "Titre de l'article" }}) }}
-            {{ form_row(formArticle.category, {'label' : 'Catégorie de l\'article'}) }}
-            {{ form_row(formArticle.auteur, {'attr' : {'placeholder' : "Nom de l'auteur" }}) }}
-            {{ form_row(formArticle.description, {'attr' : {'placeholder' : "Contenu de l'article" }}) }}
-            {{ form_row(formArticle.image, {'attr' : {'placeholder' : "URL de l'image" }}) }}
-            {{ form_end(formArticle) }}
-
-        <button type="submit" class="btn btn-success"> 
             {% if editMode %}
 
                 Enrégistrer les modifications
@@ -35,15 +36,18 @@
             {% else %}
 
                 Ajouter l'article
-                
-            {% endif %}
-        </button>    
-    {% else %}
-                <h2>Vous ne pouvez pas créer un article si vous n'êtes pas connecté !<br>
-                            Clicez ci-dessous pour se connecter !
-                </h2>
 
-                <a href="{{ path('security_login') }}" class="btn btn-primary">Connexion</a>
-    {% endif %}
-       
+            {% endif %}
+        
+        </button>
+
+        {{ form_end(formArticle) }}
+     {% else %}
+         <h2>Vous ne pouvez pas créer un article si vous n'êtes pas connecté !<br>
+                        Clicez ci-dessous pour se connecter !</h2>
+
+         <a href="{{ path('security_login') }}" class="btn btn-primary">Connexion</a>
+     {% endif %}
+
+
 {% endblock %}
