--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{{ path('blog') }}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">DiéBlog</font></font></a>
+            <a class="navbar-brand" href="{{ path('security_registration') }}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">DiéBlog</font></font></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -21,19 +21,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('blog_create') }}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Créer un article</font></font></a>
                     </li>
+                    
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('blog_type') }}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-                                 <div class = "form-group">
-                                    <select class = "form-control" id = "category">
-                                        <option> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;"> Catégories </font> </font> </option>
-                                        <option href="{{ path('blog_politique') }}"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;"> Politique </font> </font> </option>
-                                        <option href="{{ path('blog_sport') }}"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;"> Sport </font> </font> </option>
-                                        <option href="{{ path('blog_humour') }}"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;"> Humour </font> </font> </option>
-                                        <option href="{{ path('blog_autres') }}"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;"> Autres </font> </font> </option>
-
-                                    </select>
-                                </div>
-                        </font></font> </a>
+                        <a class="nav-link" href="{{ path('blog_type') }}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Catégories</font></font></a>
                     </li>
                     {% if not app.user %}
                         <li class="nav-item">
