--- a/templates/blog/type.html.twig
+++ b/templates/blog/type.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
 
     {% block body %}
+
+        <h1>Les catégories d'articles</h1>
+          
     {% endblock %}
